--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+section {
+  background: #262a41 0% 0% no-repeat padding-box;
+  opacity: 1;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.user {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  box-sizing: border-box;
+  flex: 0.55;
+  display: grid;
+  /* place-items: center; */
+  /* align-items: center; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  margin: auto;
+  padding: 30px;
+  color: #fff;
+}
+.user p {
+  font-size: 14px;
+  font-weight: 100;
+  padding-bottom: 30px;
+}
+.header {
+  font-size: 30px;
+  font-weight: 300;
+  padding-bottom: 10px;
+}
+.header span {
+  font-size: 25px;
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+.user h2 {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 14px;
+  font-weight: 600;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 992px) {
+  .user h1 {
+    top: 243px;
+    width: 122px;
+    height: 68px;
   }
-  to {
-    transform: rotate(360deg);
+}
+.switch {
+  font-size: 25px;
+  font-weight: 600;
+}
+.users {
+  border: 1px solid white;
+  padding: 35px 70px;
+  background: #f7f7ff 0% 0% no-repeat padding-box;
+  flex: 0.45;
+  border-radius: 15px;
+  margin: 5px 0;
+  margin-right: 10px;
+  box-sizing: border-box;
+  position: relative;
+}
+.users h3 {
+  margin-bottom: 10px;
+  font-weight: 800;
+  text-transform: capitalize;
+  transition: cubic-bezier(0.165, 0.84, 0.44, 1) 1000ms;
+}
+
+.users p {
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+.search-country {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.download {
+  margin-right: auto;
+  background-color: #7946c1;
+  text-decoration: none;
+  color: #ffffff;
+  padding: 5px 10px;
+  font-size: 10px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.download-icon {
+  width: 20px !important;
+  height: 20px !important;
+  padding-right: 10px;
+}
+@media screen and (min-width: 992px) {
+  section {
+    display: flex;
   }
 }
